--- a/snack-1/index.html
+++ b/snack-1/index.html
@@ -6,6 +6,9 @@
     <title>Jsnack</title>
   </head>
   <body>
-    
+    <h1 id="numeroMaggiore"></h1>
+
+
+    <script src="js/script.js"></script>
   </body>
 </html>
